<resources>
    <string name="app_name">ShareMaster</string>
    <string name="app_name_with_color">Share Master</string>
    <string name="open_account">Open new Account</string>
    <string name="enroll_card">Enroll card</string>
    <string name="main_menu">Main menu</string>
    <string name="set_card">Tap MasterCard on a back of a phone to enroll it.</string>
    <string name="open_account_description">If you do not have a MasterCard open new account.</string>
    <string name="back">BACK</string>
    <string name="logo">ShareMaster</string>
    <string name="nfc_disabled">NFC is disabled.</string>
    <string name="empty_string"> </string>
    <string name="card">Card</string>
    <string name="enter_PIN">Enter PIN Number</string>
    <string name="use_finger">Or use your fingerprint</string>
    <string name="yes">CONFIRM PIN</string>
    <string name="action_bar">ShareMaster Wallet</string>
    <string name="no_success">No success!</string>
    <string name="cancel">Cancel</string>
    <string name="account_header">Account Balance:</string>
    <string name="credit_approved">Your credit has been approved.</string>
    <string name="unsucessful_payment">Unsuccessful Payment</string>
    <string name="not_enough_funds">There are not enough funds in your account to finish payment.</string>
    <string name="want_instant_cash_credit">Do you want Instant Cash Credit?</string>
    <string name="processing">Processing&#8230;</string>
</resources>
