<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="5dp"
    android:layout_height="match_parent"
    tools:context=".EnrollCard">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:srcCompat="@drawable/logo_big"
        android:contentDescription="@string/logo"
        android:paddingRight="30dp"
        android:paddingStart="30dp"
        android:paddingLeft="30dp"
        android:paddingEnd="30dp"/>


    <TextView
        android:id="@+id/tvSetUpCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_card"
        android:textColor="@color/black"
        android:paddingTop="15dp"
      />

    <Button
        android:id="@+id/btnEnrollCard"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:contentDescription="@string/set_card"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/enroll_card"
        android:textColor="@color/white" />


    <TextView
        android:id="@+id/tvOpenAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_account_description"
        android:textColor="@color/black"
        android:paddingTop="30dp"
        />


    <Button
        android:id="@+id/btnOpenAccount"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/open_account"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_orange"
        android:contentDescription="@string/open_account"
        android:textColor="@color/black"
        android:paddingRight="15dp"
        android:layout_marginTop="15dp"
        android:paddingLeft="15dp"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/light_gray"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/btnMainMenu"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_gray"
        android:contentDescription="@string/main_menu"
        android:textColor="@color/black"
        android:paddingRight="15dp"
        android:layout_marginTop="15dp"
        android:paddingLeft="15dp"/>

</LinearLayout>