<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_height="match_parent"
    tools:context=".AuthoriseYourCard"
    android:background="@drawable/prelogin_bg">



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:srcCompat="@drawable/logo_big"
        android:contentDescription="@string/logo"
        android:layout_marginTop="5dp"
        android:paddingRight="30dp"
        android:paddingStart="30dp"
        android:paddingLeft="30dp"
        android:paddingEnd="30dp"/>


    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>



    <TextView
    android:id="@+id/tvEnterPIN"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/enter_PIN"
    android:textColor="@color/black"
    android:paddingTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
    />


    <EditText
        android:id="@+id/etPIN"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:id="@+id/btnConfirmPIN"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:contentDescription="@string/enter_PIN"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/yes"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvUseFinger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_finger"
        android:textColor="@color/black"
        android:paddingTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>
        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/fingerprint" />


</LinearLayout>